--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -77,15 +77,9 @@ install-world:
 # build src/ before contrib/
 install-world-contrib-recurse: install-world-src-recurse
 
-<<<<<<< HEAD
-$(call recurse,installdirs uninstall coverage,doc src config contrib gpcontrib)
+$(call recurse,installdirs uninstall init-po update-po,doc src config gpcontrib)
 
-$(call recurse,distprep,doc src config contrib gpcontrib)
-=======
-$(call recurse,installdirs uninstall init-po update-po,doc src config)
-
-$(call recurse,distprep coverage,doc src config contrib)
->>>>>>> 9e1c9f959422192bbe1b842a2a1ffaf76b080196
+$(call recurse,distprep coverage,doc src config contrib gpcontrib)
 
 # clean, distclean, etc should apply to contrib too, even though
 # it's not built by default
@@ -117,7 +111,6 @@ distclean maintainer-clean:
 	@rm -rf autom4te.cache/
 	rm -f config.cache config.log config.status GNUmakefile
 
-<<<<<<< HEAD
 installcheck-resgroup:
 	$(MAKE) -C src/test/isolation2 $@
 
@@ -128,20 +121,12 @@ create-demo-cluster:
 destroy-demo-cluster:
 	$(MAKE) -C gpAux/gpdemo destroy-demo-cluster
 
-check check-tests: all
-
-check check-tests installcheck installcheck-parallel installcheck-tests:
-	$(MAKE) -C src/test/regress $@
-
-$(call recurse,check-world,src/test src/pl src/interfaces/ecpg contrib src/bin gpcontrib,check)
-=======
 check check-tests installcheck installcheck-parallel installcheck-tests: CHECKPREP_TOP=src/test/regress
 check check-tests installcheck installcheck-parallel installcheck-tests: submake-generated-headers
 	$(MAKE) -C src/test/regress $@
 
-$(call recurse,check-world,src/test src/pl src/interfaces/ecpg contrib src/bin,check)
-$(call recurse,checkprep,  src/test src/pl src/interfaces/ecpg contrib src/bin)
->>>>>>> 9e1c9f959422192bbe1b842a2a1ffaf76b080196
+$(call recurse,check-world,src/test src/pl src/interfaces/ecpg contrib src/bin gpcontrib,check)
+$(call recurse,checkprep,  src/test src/pl src/interfaces/ecpg contrib src/bin gpcontrib)
 
 # This is a top-level target that runs "all" regression test suites against
 # a running server. This is what the CI pipeline runs.
