Fix misc conflicts in configure, makefiles, etc.
Stuff that hits us early..

--- a/src/backend/catalog/Makefile
+++ b/src/backend/catalog/Makefile
@@ -88,7 +88,7 @@ POSTGRES_BKI_DATA = $(addprefix $(top_srcdir)/src/include/catalog/,\
 	pg_cast.dat pg_class.dat pg_collation.dat pg_conversion.dat \
 	pg_database.dat pg_language.dat \
 	pg_namespace.dat pg_opclass.dat pg_operator.dat pg_opfamily.dat \
-	pg_pltemplate.dat pg_proc_combined.dat pg_range.dat pg_tablespace.dat \
+	pg_pltemplate.dat pg_proc.dat pg_proc_gp.dat pg_range.dat pg_tablespace.dat \
 	pg_ts_config.dat pg_ts_config_map.dat pg_ts_dict.dat pg_ts_parser.dat \
 	pg_ts_template.dat pg_type.dat \
 	)
@@ -98,12 +98,6 @@ all: distprep generated-header-symlinks
 distprep: bki-stamp
 
 .PHONY: generated-header-symlinks
-
-# In Greenplum, contents of the pg_proc catalog is in two files, pg_proc.h
-# and pg_proc_gp.h. Combine them into a single file, so that genbki.pl can
-# process it.
-pg_proc_combined.dat: $(top_srcdir)/src/include/catalog/pg_proc.dat $(top_srcdir)/src/include/catalog/pg_proc_gp.dat
-	cat $^ > $@
 
 catalog_json: $(CATALOG_JSON)
 
@@ -122,7 +116,7 @@ generated-header-symlinks: $(top_builddir)/src/include/catalog/header-stamp
 # version number when it changes.
 bki-stamp: genbki.pl Catalog.pm $(POSTGRES_BKI_SRCS) $(POSTGRES_BKI_DATA) $(top_srcdir)/configure.in
 	$(PERL) $< --include-path=$(top_srcdir)/src/include/ \
-		--set-version=$(MAJORVERSION) $(POSTGRES_BKI_SRCS)
+		--set-version=$(PG_MAJORVERSION) $(POSTGRES_BKI_SRCS)
 	touch $@
 
 # The generated headers must all be symlinked into builddir/src/include/,
@@ -160,7 +154,6 @@ uninstall-data:
 # and the generated headers are in the distribution tarball,
 # so they are not cleaned here.
 clean:
-	rm -f pg_proc_combined.dat
 
 maintainer-clean: clean
 	rm -f bki-stamp $(BKIFILES) $(GENERATED_HEADERS)
