--- a/configure.in
+++ b/configure.in
@@ -2800,10 +2800,10 @@ GP_VERSION_SHORT=`bash ./getversion --short`
 GP_VERSION_SHORT="$GP_VERSION_SHORT$with_extra_version"
 AC_SUBST(GP_VERSION_SHORT)
 
-GP_VERSION_IN="src/include/catalog/gp_version.in"
-GP_VERSION_HEADER="src/include/catalog/gp_version.h"
+GP_VERSION_IN="src/include/catalog/gp_version_at_initdb.in"
+GP_VERSION_DAT="src/include/catalog/gp_version_at_initdb.dat"
 if grep '\$\$' $GP_VERSION_IN > /dev/null 2>&1 ; then
-    sed "s,\\$.*\\$\\$,$GP_VERSION," $GP_VERSION_IN > $GP_VERSION_HEADER
+    sed "s,\\$.*\\$\\$,$GP_VERSION," $GP_VERSION_IN > $GP_VERSION_DAT
 fi
 
 GP_BASH_VERSION_IN="gpMgmt/bin/lib/gp_bash_version.sh.in"
