--- a/src/include/catalog/.gitignore
+++ b/src/include/catalog/.gitignore
@@ -1,8 +1,5 @@
 /schemapg.h
-<<<<<<< HEAD
-
-/gp_version.h
-=======
 /pg_*_d.h
+/gp_*_d.h
 /header-stamp
->>>>>>> 9e1c9f959422192bbe1b842a2a1ffaf76b080196
+/gp_version_at_initdb.dat
