--- a/src/backend/catalog/Makefile
+++ b/src/backend/catalog/Makefile
@@ -56,7 +56,7 @@ CATALOG_HEADERS := \
 	pg_resqueue.h pg_resqueuecapability.h pg_resourcetype.h \
 	pg_resgroup.h pg_resgroupcapability.h \
 	gp_configuration_history.h gp_id.h gp_distribution_policy.h gp_version_at_initdb.h \
-	gp_segment_config.h \
+	gp_segment_configuration.h \
 	pg_exttable.h pg_appendonly.h \
 	gp_fastsequence.h pg_extprotocol.h \
 	pg_attribute_encoding.h \
