Fix compilation errors in src/backend/cdb/.
Still plenty left, but this is a good start.

--- a/src/backend/cdb/Makefile
+++ b/src/backend/cdb/Makefile
@@ -40,7 +40,7 @@ OBJS = cdbappendonlystorageformat.o \
 	   cdbtm.o cdbtmutils.o \
 	   cdbutil.o \
 	   cdbvars.o cdbvarblock.o \
-	   partitionselection.o cdbdtxrecovery.o
+	   cdbdtxrecovery.o
 
 ifeq ($(PORTNAME),cygwin)
 .LIBPATTERNS := $(filter-out %.so,$(.LIBPATTERNS))
