Remove feature: password_hash_algorithm=SHA-256
It didn't really provide any security over the default md5 method. And
in PostgreSQL v10, we'll get SCRAM authentication, which is stronger.
To reduce conflicts with the PostgreSQL v10 merge, remove this GPDB-
specific feature now.

Cherry-picked from: https://github.com/greenplum-db/gpdb/pull/9554

--- a/src/backend/libpq/Makefile
+++ b/src/backend/libpq/Makefile
@@ -23,7 +23,7 @@ OBJS += be-secure-openssl.o fe-secure-openssl.o
 endif
 
 # Greenplum objects follow
-OBJS += sha2.o pg_sha2.o fe-protocol3.o fe-connect.o \
+OBJS += fe-protocol3.o fe-connect.o \
         fe-exec.o pqexpbuffer.o fe-auth.o fe-misc.o fe-protocol2.o fe-secure.o \
         $(filter getpeereid.o, $(LIBOBJS))
 
