Fix conflicts in tuplestore.c

--- a/src/backend/utils/sort/Makefile
+++ b/src/backend/utils/sort/Makefile
@@ -16,7 +16,7 @@ override CPPFLAGS := -I. -I$(srcdir) $(CPPFLAGS)
 
 OBJS = logtape.o sharedtuplestore.o sortsupport.o tuplesort.o tuplestore.o
 
-OBJS += tuplestorenew.o tuplesort_mk.o tuplesort_mkheap.o tuplesort_mkqsort.o
+OBJS += tuplestorenew.o
 
 tuplesort.o: qsort_tuple.c
 
