Fix conflicts in pg_regress

--- a/src/test/regress/GNUmakefile
+++ b/src/test/regress/GNUmakefile
@@ -180,11 +180,7 @@ query_info_hook_test:
 ## Run tests
 ##
 
-<<<<<<< HEAD
-REGRESS_OPTS = --dlpath=. --init-file=$(srcdir)/init_file $(EXTRA_REGRESS_OPTS) --load-extension=gp_inject_fault
-=======
-REGRESS_OPTS = --dlpath=. --max-concurrent-tests=20 $(EXTRA_REGRESS_OPTS)
->>>>>>> 9e1c9f959422192bbe1b842a2a1ffaf76b080196
+REGRESS_OPTS = --dlpath=. --max-concurrent-tests=20 --init-file=$(srcdir)/init_file $(EXTRA_REGRESS_OPTS) --load-extension=gp_inject_fault
 
 check: all tablespace-setup
 	$(pg_regress_check) $(REGRESS_OPTS) --schedule=$(srcdir)/parallel_schedule $(MAXCONNOPT) $(EXTRA_TESTS)
