Remove Hybrid Hash Agg code, reverting nodeAgg.c to upstream version.
Per discussion on slack, we'll backport Jeff's patch to spill hash aggs
to disk from upstream later.

--- a/src/backend/executor/Makefile
+++ b/src/backend/executor/Makefile
@@ -46,7 +46,6 @@ OBJS += nodeDynamicIndexscan.o \
        nodeSplitUpdate.o \
        nodeTupleSplit.o \
        nodePartitionSelector.o \
-       execDynamicScan.o \
-       execHHashagg.o
+       execDynamicScan.o
 
 include $(top_srcdir)/src/backend/common.mk
