Fix linker problems in src/backend/libpq

--- a/src/backend/access/common/Makefile
+++ b/src/backend/access/common/Makefile
@@ -15,6 +15,6 @@ include $(top_builddir)/src/Makefile.global
 OBJS = bufmask.o heaptuple.o indextuple.o printsimple.o printtup.o \
 	relation.o reloptions.o scankey.o session.o tupconvert.o tupdesc.o
 
-OBJS += bufmask.o memtuple.o reloptions_gp.o
+OBJS += memtuple.o reloptions_gp.o
 
 include $(top_srcdir)/src/backend/common.mk
