More fixes to the way libpq functions are linked into the backend.
Disable the "link canary" check in backend.

--- a/src/backend/libpq/Makefile
+++ b/src/backend/libpq/Makefile
@@ -20,13 +20,13 @@ OBJS = be-fsstubs.o be-secure.o be-secure-common.o auth.o crypt.o hba.o ifaddr.o
 
 ifeq ($(with_openssl),yes)
 OBJS += be-secure-openssl.o
-OBJS += fe-secure-openssl.o fe-secure-common.o
+OBJS += fe-secure-openssl.o
 endif
 
 # Greenplum objects follow
 OBJS += fe-protocol3.o fe-connect.o \
         fe-exec.o pqexpbuffer.o fe-auth.o fe-misc.o fe-protocol2.o fe-secure.o \
-	fe-auth-scram.o \
+	fe-secure-common.o fe-auth-scram.o \
         $(filter getpeereid.o, $(LIBOBJS))
 
 fe-protocol3.c fe-connect.c fe-exec.c pqexpbuffer.c fe-auth.c fe-auth-scram.c fe-misc.c fe-protocol2.c fe-secure.c fe-secure-openssl.c fe-secure-common.c fe-secure-gssapi.c fe-gssapi-common.c: % : $(top_srcdir)/src/interfaces/libpq/%
