Fix gpinitsystem ImportError _pg.so: undefined symbol: pg_fprintf
Issue seems related to postgres commit 96bf88d5271 which unified calls
to *printf() functions.

--- a/src/port/Makefile
+++ b/src/port/Makefile
@@ -32,7 +32,7 @@ subdir = src/port
 top_builddir = ../..
 include $(top_builddir)/src/Makefile.global
 
-override CPPFLAGS := -I$(top_builddir)/src/port -DFRONTEND $(CPPFLAGS)
+override CPPFLAGS := -I$(top_builddir)/src/port -DFRONTEND $(CPPFLAGS) -fPIC
 LIBS += $(PTHREAD_LIBS)
 
 OBJS = $(LIBOBJS) $(PG_CRC32C_OBJS) chklocale.o erand48.o inet_net_ntop.o \
