--- a/gpcontrib/Makefile
+++ b/gpcontrib/Makefile
@@ -17,8 +17,8 @@ ifeq "$(enable_debug_extensions)" "yes"
                gp_distribution_policy \
                gp_internal_tools \
                gp_debug_numsegments \
-               gp_inject_fault \
-               gp_replica_check
+               gp_inject_fault
+               #gp_replica_check GPDB_12_MERGE_FIXME
 else
 	recurse_targets = gp_sparse_vector \
                gp_distribution_policy \
