Respect with{out}-openssl config flag when building backend libpq

--- a/src/backend/libpq/Makefile
+++ b/src/backend/libpq/Makefile
@@ -26,8 +26,13 @@ endif
 # Greenplum objects follow
 OBJS += fe-protocol3.o fe-connect.o \
         fe-exec.o pqexpbuffer.o fe-auth.o fe-misc.o fe-protocol2.o fe-secure.o \
-	fe-secure-common.o fe-auth-scram.o \
+	fe-auth-scram.o \
         $(filter getpeereid.o, $(LIBOBJS))
+
+# Greenplum OPENSSL objects follow
+ifeq ($(with_openssl),yes)
+OBJS += fe-secure-common.o
+endif
 
 fe-protocol3.c fe-connect.c fe-exec.c pqexpbuffer.c fe-auth.c fe-auth-scram.c fe-misc.c fe-protocol2.c fe-secure.c fe-secure-openssl.c fe-secure-common.c fe-secure-gssapi.c fe-gssapi-common.c: % : $(top_srcdir)/src/interfaces/libpq/%
 	rm -f $@ && $(LN_S) $< .
