Revert "DO NOT compile and install pxf_fdw (Temporarily)"
This reverts commit 78b10efd7836d0f4e7000926f9f992347b1c9aee.

It compiles now.

--- a/gpcontrib/Makefile
+++ b/gpcontrib/Makefile
@@ -43,8 +43,7 @@ gpcloud:
 
 pxf:
 	@if [ "$(enable_pxf)" = "yes" ]; then \
-		echo "GPDB_12_MERGE_FIXME: skipping pxf_fdw"; \
-		echo "-- $(MAKE) -C pxf_fdw;"; \
+		$(MAKE) -C pxf_fdw; \
 	fi
 
 mapreduce:
@@ -66,8 +65,7 @@ install:
 		$(MAKE) -C gpmapreduce install; \
 	fi
 	@if [ "$(enable_pxf)" = "yes" ]; then \
-		echo "GPDB_12_MERGE_FIXME: skipping pxf_fdw"; \
-		echo "-- $(MAKE) -C pxf_fdw install;"; \
+		$(MAKE) -C pxf_fdw install; \
 	fi
 	@if [ "$(enable_orafce)" = "yes" ]; then \
 		$(MAKE) -C orafce NO_PGXS=true install; \
