--- a/src/backend/utils/misc/test/Makefile
+++ b/src/backend/utils/misc/test/Makefile
@@ -4,7 +4,9 @@ include $(top_builddir)/src/Makefile.global
 
 TARGETS = ps_status bitstream bitmap_compression faultinjector_warnings pg_mkdir_p guc guc_gp
 
-faultinjector_warnings.t: ../faultinjector_warnings.o faultinjector_warnings_test.o
-
-
 include $(top_builddir)/src/backend/mock.mk
+
+faultinjector_warnings.t: ../faultinjector_warnings.o \
+	faultinjector_warnings_test.o \
+	$(MOCK_DIR)/backend/utils/fmgr/fmgr_mock.o \
+	$(MOCK_DIR)/backend/access/hash/hash_mock.o \
