Fix some unittests
Many of these were related to new references to fmgr and hash.

A couple relate to Postgres commit d9dd406fe281 that adds '-Werror=vla'
to compile arguments which will cause errors when arrays are declared
with a variable size, which was being done in a few unittests.

For example, code like:
```
int blockCount = 4;
uint32 bitmap2[blockCount];
```

Errored like:
```
ISO C90 forbids variable length array ‘jobs’ [-Werror=vla]
```

--- a/src/backend/utils/misc/test/Makefile
+++ b/src/backend/utils/misc/test/Makefile
@@ -10,3 +10,21 @@ faultinjector_warnings.t: ../faultinjector_warnings.o \
 	faultinjector_warnings_test.o \
 	$(MOCK_DIR)/backend/utils/fmgr/fmgr_mock.o \
 	$(MOCK_DIR)/backend/access/hash/hash_mock.o \
+
+ps_status.t: $(MOCK_DIR)/backend/utils/fmgr/fmgr_mock.o \
+	$(MOCK_DIR)/backend/access/hash/hash_mock.o \
+
+bitstream.t: $(MOCK_DIR)/backend/utils/fmgr/fmgr_mock.o \
+	$(MOCK_DIR)/backend/access/hash/hash_mock.o \
+
+bitmap_compression.t: $(MOCK_DIR)/backend/utils/fmgr/fmgr_mock.o \
+	$(MOCK_DIR)/backend/access/hash/hash_mock.o \
+
+pg_mkdir_p.t: $(MOCK_DIR)/backend/utils/fmgr/fmgr_mock.o \
+	$(MOCK_DIR)/backend/access/hash/hash_mock.o \
+
+guc.t: $(MOCK_DIR)/backend/utils/fmgr/fmgr_mock.o \
+	$(MOCK_DIR)/backend/access/hash/hash_mock.o \
+
+guc_gp.t: $(MOCK_DIR)/backend/utils/fmgr/fmgr_mock.o \
+	$(MOCK_DIR)/backend/access/hash/hash_mock.o \
