Fix generated test case
It's a typo in b877c17cbdff492258494a464f9bfc8d773d4b16

--- a/src/bin/gpfdist/Makefile
+++ b/src/bin/gpfdist/Makefile
@@ -21,6 +21,7 @@ endif
 
 ifeq ($(have_yaml),yes)
   OBJS += transform.o
+  GPFDIST_LIBS += -lyaml
   ifneq ($(PORTNAME),win32)
     override CPPFLAGS := -DGPFXDIST $(CPPFLAGS)
   endif
