--- a/src/test/regress/GNUmakefile
+++ b/src/test/regress/GNUmakefile
@@ -93,7 +93,7 @@ uninstall:
 NAME = regress
 OBJS = $(WIN32RES) regress.o
 
-OBJS += regress_gp.o partindex.o workfile_mgr_test.o
+OBJS += regress_gp.o workfile_mgr_test.o
 
 include $(top_srcdir)/src/Makefile.shlib
 
