--- a/src/backend/fts/test/Makefile
+++ b/src/backend/fts/test/Makefile
@@ -26,4 +26,6 @@ ftsprobe.t: \
     $(MOCK_DIR)/backend/libpq/fe-exec_mock.o \
     $(MOCK_DIR)/backend/libpq/fe-connect_mock.o \
     $(MOCK_DIR)/backend/access/transam/xact_mock.o \
-    $(MOCK_DIR)/backend/utils/time/snapmgr_mock.o
+    $(MOCK_DIR)/backend/utils/time/snapmgr_mock.o \
+    $(MOCK_DIR)/backend/access/hash/hash_mock.o \
+    $(MOCK_DIR)/backend/utils/fmgr/fmgr_mock.o
