Refactor join pruning with Partition Selectors.
Heavily refactor the way plans with join pruning are planned and executed.

- In executor, Partition Selectors now use the upstream partition pruning
  infrastructure to compute which partitions can contain tuples that pass
  the join qual. The partitions are recorded in a Bitmapset, like the
  upstream partition pruning code does, and the Bitmapset is passed from
  the PartitionSelector to the Append node using a special executor Param.
  The old hash table that contained the partition OIDs is gone, as is the
  PartSelected expression. The Append node now directly skips the pruned
  partitions

- In planner, use the upstream code to construct the PartitionPruneInfo
  steps to do the pruning. Thanks to this, join pruning now also works
  for quals with <, > operators, and for tables partitioned on expressions
  rather than plain columns.

- In planner, refactor where the decision to do join pruning is made. It's
  now decided in create_append_plan(), where run-time pruning is decided,
  too. To pass the partition pruning info to the Partition Selector above
  the Append, maintain a stack of joins that are candidates for Partition
  Selectors as we recurse in create_plan().

--- a/src/backend/utils/adt/Makefile
+++ b/src/backend/utils/adt/Makefile
@@ -51,7 +51,6 @@ varlena.o: varlena.c levenshtein.c
 
 # GPDB additions
 OBJS +=	complex_type.o gp_dump_oids.o gp_optimizer_functions.o \
-	gp_partition_functions.o interpolate.o matrix.o \
-	pivot.o
+	interpolate.o matrix.o pivot.o
 
 include $(top_srcdir)/src/backend/common.mk
