mock inline function
upstream change `pg_sendint` to inline function so that our mocker can
not detect and auto-generate mock function for us. Define a UNITTEST
marco in makefile, change `pg_sendint` to normal function if UNITTEST
marco is defined.

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -166,8 +166,8 @@ $(call recurse,installcheck-world,src/bin/pg_upgrade,check)
 # to put into "make all", either.
 .PHONY : unittest-check
 unittest-check:
-	$(MAKE) -C src/backend unittest-check
-	$(MAKE) -C src/bin unittest-check
+	$(MAKE) CFLAGS=-DUNITTEST -C src/backend unittest-check
+	$(MAKE) CFLAGS=-DUNITTEST -C src/bin unittest-check
 
 GNUmakefile: GNUmakefile.in $(top_builddir)/config.status
 	./config.status $@
