--- a/src/test/recovery/Makefile
+++ b/src/test/recovery/Makefile
@@ -18,7 +18,7 @@ include $(top_builddir)/src/Makefile.global
 check:
 	$(prove_check)
 
-installcheck:
+installcheck: checkprep
 	$(prove_installcheck)
 
 clean distclean maintainer-clean:
