Output gpfdist log in regress test (#10641)
* Output gpfdist log in regress test

* do curl 127.0.0.1:7070 can not work for gpfdists, we just sleep for 5s
* cp -rf $(MASTER_DATA_DIRECTORY)/gpfdists/* will copy all files in
  in gpfdists instead of gpfdists folder into dest folder.

--- a/src/bin/gpfdist/regress/Makefile
+++ b/src/bin/gpfdist/regress/Makefile
@@ -16,7 +16,10 @@ REGRESS_OPTS = --init-file=init_file
 installcheck: watchdog
 ifeq ($(enable_gpfdist),yes)
 ifeq ($(with_openssl),yes)
-	cp -rf $(MASTER_DATA_DIRECTORY)/gpfdists data/gpfdist_ssl/certs_matching
+	rm -rf data/gpfdist_ssl/certs_matching
+	mkdir data/gpfdist_ssl/certs_matching
+	cp -rf $(MASTER_DATA_DIRECTORY)/gpfdists/* data/gpfdist_ssl/certs_matching
+	# for verify_gpfdists_cert=off
 	cp data/gpfdist_ssl/certs_matching/root.crt data/gpfdist_ssl/certs_not_matching
 endif
 endif
