Debug: Travis build was failing on the 'fast_default'
Print the regression.diffs to the console for debugging. It would be nice
if the Travis build always did that, but this is just a temporary helper.

--- a/src/test/regress/GNUmakefile
+++ b/src/test/regress/GNUmakefile
@@ -193,7 +193,7 @@ check-tests: all tablespace-setup | temp-install
 installcheck: installcheck-good
 
 installcheck-small: all
-	$(pg_regress_installcheck) $(REGRESS_OPTS) --schedule=$(srcdir)/parallel_schedule $(EXTRA_TESTS)
+	$(pg_regress_installcheck) $(REGRESS_OPTS) --schedule=$(srcdir)/parallel_schedule $(EXTRA_TESTS) || ( cat regression.diffs; exit 1 )
 
 installcheck-good: all twophase_pqexecparams hooktest query_info_hook_test
 	$(pg_regress_installcheck) $(REGRESS_OPTS) --schedule=$(srcdir)/parallel_schedule --schedule=$(srcdir)/greenplum_schedule $(EXTRA_TESTS)
